# qsospec

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: python-publish.yml
docs/: api.rst  conf.py  development_plan.md  examples.rst  index.rst  recipe_reference.rst  references.rst  run_bundles.md  scientific_definitions.rst
docs/_static/: custom.css
docs/contributing/: changelog.md  development.rst  index.rst  roadmap.rst
docs/getting_started/: choose_workflow.rst  dustmaps.rst  index.rst  installation.rst  quickstart.rst
docs/how_to/: custom_recipes.rst  fit_arrays.rst  fit_file.rst  fit_j001554.rst  fit_parquet_batch.rst  fit_with_host.rst  index.rst  inspect_run.rst  render_qa.rst
docs/reference/: configuration.rst  index.rst  recipes.rst  run_bundles.rst  warnings.rst
docs/reference/api/: configuration.rst  fitting.rst  index.rst  io.rst  plotting.rst  results.rst  spectrum.rst
docs/science/: continuum_model.rst  coverage_reliability.rst  emission_line_models.rst  index.rst  measurements.rst  references.rst
docs/user_guide/: batch_fitting.rst  configuration.rst  global_fitting.rst  host_decomposition.rst  index.rst  local_fitting.rst  preprocessing.rst  qa_plots.rst  results.rst  results_warnings.rst  spectrum_inputs.rst  workflows.rst
examples/: README.md
src/qsospec/: __init__.py  api.py  batch.py  complex_recipes.py  config.py  extinction.py  generic_complex.py  global_fit.py  global_io.py  global_result.py  host_workflow.py  jacobian.py  lines.py  metadata.py  optimize.py  parameters.py  qa_archive.py  readers.py  recipes.py  residuals.py  result.py  run_store.py  spectrum.py  variable_projection.py  warnings.py
src/qsospec/fitting/: __init__.py  complexes.py  global_fit.py  local.py
src/qsospec/io/: __init__.py  products.py  qa.py  readers.py  run_store.py
src/qsospec/models/: __init__.py  continuum.py  gaussian.py  lorentzian.py
src/qsospec/plotting/: __init__.py  local.py
src/qsospec/solvers/: __init__.py  least_squares.py  variable_projection.py
src/qsospec/templates/: README.md  __init__.py  balmer.py  iron.py  normalize.py  registry.py
src/qsospec/workflows/: __init__.py  batch.py  host_workflow.py
src/qsospec/workflows/host/: __init__.py  config.py  dust.py  euclid.py  io.py  ppxf_host.py  templates.py
tests/: test_docs_examples.py  test_galactic_extinction.py  test_host_decomp.py  test_host_decomp_integration.py  test_neofit_gaussian_jacobian.py  test_neofit_global_complexes.py  test_neofit_global_workflow.py  test_neofit_host_workflow.py  test_neofit_line_complex_fit.py  test_neofit_registry_workflow.py  test_neofit_run_store.py  test_neofit_spectrum.py  test_neofit_variable_projection.py  test_qsospec_balmer_templates.py  test_qsospec_gaussian_jacobian.py  test_qsospec_global_complexes.py  test_qsospec_global_workflow.py  test_qsospec_host_workflow.py  test_qsospec_import.py  test_qsospec_iron_templates.py  test_qsospec_line_complex_fit.py  test_qsospec_local_mode.py  test_qsospec_lorentzian.py  test_qsospec_lya.py  test_qsospec_plotting.py  test_qsospec_power_law_modes.py  test_qsospec_registry_workflow.py  test_qsospec_run_store.py  test_qsospec_spectrum.py  test_qsospec_units.py  test_qsospec_variable_projection.py  test_qsospec_warnings.py
